Corrected Contrast Errors from audit V2

--- a/css/Fan Website.css
+++ b/css/Fan Website.css
@@ -47,7 +47,7 @@ h2  {
 h3 {
     padding: 5px 20px;
     margin: 0;
-    color: #9999FF;
+    color: #070422;
 }
 
 div#header {
@@ -68,11 +68,12 @@ div#header a {
     right: 0;
     top: 23px;
     padding: 10px;
-    color: #006;
+    color: #ffffff;
 }
 
 div#navigation {
     background: #140f20;
+    color: #FFFFFF;
 }
 
 div#navigation li {
